--- a/healthServiceApp/src/main/resources/templates/doctor-edit.html
+++ b/healthServiceApp/src/main/resources/templates/doctor-edit.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Register</title>
+    <title>Edit Doctor Profile</title>
     <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css"
           th:href="@{/bootstrap/css/bootstrap.min.css}"/>
     <link rel="stylesheet" href="../static/css/site.css" th:href="@{/css/site.css}"/>
@@ -13,9 +13,9 @@
 <main>
     <br/>
     <div class="container">
-        <h1>Регистрация на лекар</h1>
+        <h1>Редактиране на профил</h1>
         <br/>
-        <form th:replace="fragments/forms::register-form"></form>
+        <form th:replace="fragments/forms::edit-form"></form>
         <br/>
     </div>
 </main>
