--- a/healthServiceApp/src/main/resources/templates/doctor-register.html
+++ b/healthServiceApp/src/main/resources/templates/doctor-register.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Health Service App</title>
+    <title>Register Doctor</title>
     <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css"
           th:href="@{/bootstrap/css/bootstrap.min.css}"/>
     <link rel="stylesheet" href="../static/css/site.css" th:href="@{/css/site.css}"/>
@@ -13,7 +13,10 @@
 <main>
     <br/>
     <div class="container">
-        <h1>Health Service App Home Page</h1>
+        <h1>Регистрация на лекар</h1>
+        <br/>
+        <form th:replace="fragments/forms::register-form"></form>
+        <br/>
     </div>
 </main>
 <script th:src="@{/jquery/jquery.min.js}"></script>
