--- a/healthServiceApp/src/main/resources/templates/fragments/forms.html
+++ b/healthServiceApp/src/main/resources/templates/fragments/forms.html
@@ -16,13 +16,13 @@
     </div>
 
     <div class="form-group" th:classappend="${#fields.hasErrors('uin')}? 'has-danger'">
-        <label for="uinId">УИН на лекаря-специалист</label>
+        <label for="uinId">УИН</label>
         <input type="text" class="form-control" id="uinId" aria-describedby="uinHelp" name="uin" th:field="*{uin}"/>
         <small id="uinHelp" class="form-control-feedback" th:each="error : ${#fields.errors('uin')}" th:text="${error}">Error Message</small>
     </div>
 
     <fieldset class="form-group" th:classappend="${#fields.hasErrors('title')}? 'has-danger'">
-        <label for="titleId">Изберете титла:</label>
+        <label for="titleId">Изберете титла</label>
         <div class="form-check" th:each="title,iter : ${titles}">
             <label class="form-check-label">
                 <input type="radio" class="form-check-input" id="titleId" th:value="${title.getName()}" th:field="*{title}"/>
@@ -47,7 +47,7 @@
     </div>
 
     <div class="form-group" th:classappend="${#fields.hasErrors('email')} ? 'has-danger'">
-        <label class="form-control-label" for="inputUsername">E-mail адрес</label>
+        <label class="form-control-label" for="inputUsername">Имейл адрес</label>
         <input type="text" class="form-control form-control-danger" id="inputUsername" th:field="*{email}"/>
         <div class="form-control-feedback" th:each="error : ${#fields.errors('email')}" th:text="${error}">Sorry, that email's taken. Try another?</div>
     </div>
@@ -64,90 +64,52 @@
     <button type="submit" class="btn btn-success">Запази</button>
 </form>
 
-<form method="post" th:fragment="edit-form" th:object="${editDoctorindingModel}">
-    <div class="form-group" th:classappend="${#fields.hasErrors('name')}? 'has-danger'">
-        <label for="firstName">Name</label>
-        <input type="text" class="form-control" id="nameId" aria-describedby="nameHelp" name="name" th:field="*{name}" th:value="*{name}"/>
-        <small id="nameHelp" class="form-control-feedback" th:each="error : ${#fields.errors('name')}" th:text="${error}">Error Message</small>
+<form method="post" th:fragment="edit-form" th:object="${editDoctorBidingModel}">
+
+    <div class="form-group" th:classappend="${#fields.hasErrors('firstName')}? 'has-danger'">
+        <label for="firstName">Име</label>
+        <input type="text" class="form-control" id="firstName" aria-describedby="firstNameHelp" name="firstName" th:field="*{firstName}"/>
+        <small id="firstNameHelp" class="form-control-feedback" th:each="error : ${#fields.errors('firstName')}" th:text="${error}">Error Message</small>
     </div>
 
-    <div class="form-group" th:classappend="${#fields.hasErrors('description')}? 'has-danger'">
-        <label for="desc">Description</label>
-        <textarea type="text" class="form-control" id="desc" aria-describedby="descHelp" name="description" th:field="*{description}" th:value="*{description}"/>
-        <small id="descHelp" class="form-control-feedback" th:each="error : ${#fields.errors('description')}" th:text="${error}">Error Message</small>
+    <div class="form-group" th:classappend="${#fields.hasErrors('lastName')}? 'has-danger'">
+        <label for="lastName">Фамилия</label>
+        <input type="text" class="form-control" id="lastName" aria-describedby="lastNameHelp" name="lastName" th:field="*{lastName}"/>
+        <small id="lastNameHelp" class="form-control-feedback" th:each="error : ${#fields.errors('lastName')}" th:text="${error}">Error Message</small>
     </div>
 
-    <div class="form-group" th:classappend="${#fields.hasErrors('sideEffects')}? 'has-danger'">
-        <label for="sideEff">Side Effect</label>
-        <input type="text" class="form-control" id="sideEff" aria-describedby="sideEffHelp" name="sideEffects" th:field="*{sideEffects}" th:value="*{sideEffects}"/>
-        <small id="sideEffHelp" class="form-control-feedback" th:each="error : ${#fields.errors('sideEffects')}" th:text="${error}">Error Message</small>
+    <div class="form-group" th:classappend="${#fields.hasErrors('uin')}? 'has-danger'">
+        <label for="uinId">УИН</label>
+        <input type="text" class="form-control" id="uinId" aria-describedby="uinHelp" name="uin" th:field="*{uin}"/>
+        <small id="uinHelp" class="form-control-feedback" th:each="error : ${#fields.errors('uin')}" th:text="${error}">Error Message</small>
     </div>
 
-    <div class="form-group" th:classappend="${#fields.hasErrors('creator')}? 'has-danger'">
-        <label for="crEff">Creator</label>
-        <input type="text" class="form-control" id="crEff" aria-describedby="crHelp" name="creator" th:field="*{creator}" th:value="*{creator}"/>
-        <small id="crHelp" class="form-control-feedback" th:each="error : ${#fields.errors('creator')}" th:text="${error}">Error Message</small>
-    </div>
-
-    <div class="form-check">
-        <label class="form-check-label">
-            <input type="checkbox" class="form-check-input" name="deadly" th:field="*{deadly}" th:value="*{deadly}"/>
-            Is Deadly?
-        </label>
-    </div>
-
-    <div class="form-check">
-        <label class="form-check-label">
-            <input type="checkbox" class="form-check-input" name="curable" th:field="*{curable}" th:value="*{curable}"/>
-            Is Curable?
-        </label>
-    </div>
-
-    <fieldset class="form-group" th:classappend="${#fields.hasErrors('mutation')}? 'has-danger'">
-        <legend>Choose Mutation</legend>
-        <div class="form-check" th:each="mutation,iter : ${mutations}">
+    <fieldset class="form-group" th:classappend="${#fields.hasErrors('title')}? 'has-danger'">
+        <label for="titleId">Титла</label>
+        <div class="form-check" th:each="title,iter : ${titles}">
             <label class="form-check-label">
-                <input type="radio" class="form-check-input" id="optionsRadios1" th:value="${mutation.toString()}" th:field="*{mutation}"/>
-                <span th:text="${mutation.toString()}"></span>
+                <input type="radio" class="form-check-input" id="titleId" th:value="${title.getName()}" th:field="*{title}" th:selected="t"/>
+                <span th:text="${title.getName()}"></span>
             </label>
         </div>
-        <div class="form-check disabled">
-            <label class="form-check-label">
-                <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios3" value="option3" disabled="true" />
-                Save Humanity
-            </label>
-        </div>
-        <small id="toHelp" class="form-control-feedback" th:each="error : ${#fields.errors('mutation')}" th:text="${error}">Error Message</small>
+        <small id="titleHelp" class="form-control-feedback" th:each="error : ${#fields.errors('title')}" th:text="${error}">Error Message</small>
     </fieldset>
 
-    <div class="form-group" th:classappend="${#fields.hasErrors('turnoverRate')}? 'has-danger'">
-        <label for="turnover">Turnover Rate</label>
-        <input type="number" class="form-control" id="turnover" aria-describedby="turnoverHelp" name="turnoverRate" th:field="*{turnoverRate}"/>
-        <small id="trHelp" class="form-control-feedback" th:each="error : ${#fields.errors('turnoverRate')}" th:text="${error}">Error Message</small>
-    </div>
-
-    <div class="form-group" th:classappend="${#fields.hasErrors('hoursUntilTurn')}? 'has-danger'">
-        <label for="hrs">Hours Until Turn</label>
-        <input type="number" class="form-control" id="hrs" aria-describedby="hrsHelp" name="hoursUntilTurn" th:field="*{hoursUntilTurn}"/>
-        <small id="hrsHelp" class="form-control-feedback" th:each="error : ${#fields.errors('turnoverRate')}" th:text="${error}">Error Message</small>
-    </div>
-
-    <div class="form-group">
-        <label for="exampleSelect1">Magnitude</label>
-        <select class="form-control" id="exampleSelect1" name="magnitude" th:field="*{magnitude}">
-            <option th:each="magnitude : ${magnitudes}" th:value="${magnitude}" th:text="${#strings.capitalize(#strings.toLowerCase(magnitude))}">Option 1</option>
+    <div class="form-group" th:classappend="${#fields.hasErrors('specialities')}? 'has-danger'">
+        <label for="specialitiesId">Специалност(и)</label>
+        <select multiple="true" class="form-control" id="specialitiesId" name="specialities" th:field="*{specialities}">
+            <option th:each="speciality : ${specialities}" th:value="${speciality.name}" th:text="${speciality.name}">Option 1</option>
         </select>
+        <small id="capHelp" class="form-control-feedback" th:each="error : ${#fields.errors('specialities')}" th:text="${error}">Error Message</small>
     </div>
 
-    <div class="form-group" th:classappend="${#fields.hasErrors('capitals')}? 'has-danger'">
-        <label for="exampleSelect2">Affected Capitals</label>
-        <select multiple="true" class="form-control" id="exampleSelect2" name="capitals" th:field="*{capitals}">
-            <option th:each="capital : ${capitals}" th:value="${capital.name}" th:text="${capital.name}">Option 1</option>
-        </select>
-        <small id="capHelp" class="form-control-feedback" th:each="error : ${#fields.errors('capitals')}" th:text="${error}">Error Message</small>
+    <div class="form-group" th:classappend="${#fields.hasErrors('profileImage')}? 'has-danger'">
+        <label for="imageId">Профилна снимка</label>
+        <input type="file" accept="image/*" class="form-control-file" id="imageId" aria-describedby="imageHelp" name="profileImage" th:field="*{profileImage}"/>
+        <small id="imageHelp" class="form-control-feedback" th:each="error : ${#fields.errors('profileImage')}" th:text="${error}">Error Message</small>
     </div>
 
-    <button type="submit" class="btn btn-secondary">Edit</button>
+    <button type="submit" class="btn btn-success">Запази</button>
 </form>
 
 <form method="post" th:fragment="login-form" th:object="${registerDoctorBidingModel}">
