--- a/healthServiceApp/src/main/resources/templates/fragments/parts.html
+++ b/healthServiceApp/src/main/resources/templates/fragments/parts.html
@@ -16,20 +16,26 @@
                 <a class="nav-link" href="/">Начало</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/doctors">Покажи всички лекари</a>
+                <a class="nav-link" href="/doctor/all">Всички лекари</a>
             </li>
-            <!--<div sec:authorize="hasRole('ADMIN') or hasRole('USER')">-->
-                <!--<li class="nav-item dropdown">-->
-                    <!--<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarTournamentsDropdownMenu"-->
-                       <!--data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-                        <!--Tournaments-->
-                    <!--</a>-->
-                    <!--<div class="dropdown-menu" aria-labelledby="navbarTournamentsDropdownMenu">-->
-                        <!--<a class="dropdown-item" th:href="@{/tournaments}">Show</a>-->
-                        <!--<a class="dropdown-item" th:href="@{/tournaments/create}">Create</a>-->
-                    <!--</div>-->
+            <!--<div sec:authorize="hasRole('DOCTOR')">-->
+                <!--<li class="nav-item">-->
+                    <!--<a class="nav-link" href="/patients">Моите пациенти</a>-->
                 <!--</li>-->
             <!--</div>-->
+
+            <div sec:authorize="hasRole('DOCTOR')">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="/patients" id="navbarPatientsDropdownMenu"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Пациенти
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarPatientsDropdownMenu">
+                        <a class="dropdown-item" th:href="@{/patients}">Покажи всички</a>
+                        <a class="dropdown-item" th:href="@{/patients/add}">Добави нов</a>
+                    </div>
+                </li>
+            </div>
 
             <!--<div sec:authorize="hasRole('ADMIN') or hasRole('USER')">-->
                 <!--<li class="nav-item dropdown">-->
@@ -52,12 +58,15 @@
         </ul>
 
         <ul class="nav navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/register">Регистрирай се</a>
+            <li class="nav-item" sec:authorize="isAnonymous()">
+                <a class="nav-link" href="/doctor/register">Регистрирай се</a>
             </li>
             <li class="nav-item " sec:authorize="isAnonymous()">
                 <a class="nav-link" href="/login">Вход</a>
             </li>
+            <!--<li class="nav-item" sec:authorize="isAuthenticated()">-->
+                <!--<a class="nav-link" th:href="@{/edit/{id}(id=${userId})}">Редактирай профил</a>-->
+            <!--</li>-->
             <li class="nav-item" sec:authorize="isAuthenticated()">
                 <a class="nav-link" href="/logout">Изход</a>
             </li>
