--- a/healthServiceApp/src/main/resources/templates/patients/add.html
+++ b/healthServiceApp/src/main/resources/templates/patients/add.html
@@ -10,14 +10,15 @@
 <body>
 <header th:replace="fragments/parts::menu">
 </header>
-<br/>
+<main>
+    <br/>
     <div class="container">
         <h1>Добавяне на нов пациент</h1>
         <br/>
-        <form th:replace="patient/forms::add-form"></form>
+        <form th:replace="patients/forms::add-form"></form>
         <br/>
     </div>
-
+</main>
 <script th:src="@{/jquery/jquery.min.js}"></script>
 <script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
 
