--- a/healthServiceApp/src/main/resources/templates/patients/edit.html
+++ b/healthServiceApp/src/main/resources/templates/patients/edit.html
@@ -2,10 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Health Service App</title>
-    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css"
+    <title>Edit Patient</title>
+    <link rel="stylesheet" href="../../static/bootstrap/css/bootstrap.min.css"
           th:href="@{/bootstrap/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" href="../static/css/site.css" th:href="@{/css/site.css}"/>
+    <link rel="stylesheet" href="../../static/css/site.css" th:href="@{/css/site.css}"/>
 </head>
 <body>
 <header th:replace="fragments/parts::menu">
@@ -13,10 +13,14 @@
 <main>
     <br/>
     <div class="container">
-        <h1>Health Service App Home Page</h1>
+        <h1>Редактиране данните на пациент</h1>
+        <br/>
+        <form th:replace="patients/forms::edit-form"></form>
+        <br/>
     </div>
 </main>
 <script th:src="@{/jquery/jquery.min.js}"></script>
 <script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
+
 </body>
 </html>
