--- a/healthServiceApp/src/main/resources/templates/patient/add.html
+++ b/healthServiceApp/src/main/resources/templates/patient/add.html
@@ -10,15 +10,14 @@
 <body>
 <header th:replace="fragments/parts::menu">
 </header>
-<main>
-    <br/>
+<br/>
     <div class="container">
         <h1>Добавяне на нов пациент</h1>
         <br/>
-        <form th:replace="patients/forms::add-form"></form>
+        <form th:replace="patient/forms::add-form"></form>
         <br/>
     </div>
-</main>
+
 <script th:src="@{/jquery/jquery.min.js}"></script>
 <script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
 
