--- a/healthServiceApp/src/main/resources/templates/patient/forms.html
+++ b/healthServiceApp/src/main/resources/templates/patient/forms.html
@@ -2,11 +2,17 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <body>
 
-<form method="post" th:fragment="register-form" th:object="${registerDoctorBidingModel}">
+<form method="post" th:fragment="add-form" th:object="${addPatientBidingModel}">
     <div class="form-group" th:classappend="${#fields.hasErrors('firstName')}? 'has-danger'">
         <label for="firstName">Име</label>
         <input type="text" class="form-control" id="firstName" aria-describedby="firstNameHelp" name="firstName" th:field="*{firstName}"/>
         <small id="firstNameHelp" class="form-control-feedback" th:each="error : ${#fields.errors('firstName')}" th:text="${error}">Error Message</small>
+    </div>
+
+    <div class="form-group" th:classappend="${#fields.hasErrors('surname')}? 'has-danger'">
+        <label for="surname">Презиме</label>
+        <input type="text" class="form-control" id="surname" aria-describedby="surnameHelp" name="surname" th:field="*{surname}"/>
+        <small id="surnameHelp" class="form-control-feedback" th:each="error : ${#fields.errors('surname')}" th:text="${error}">Error Message</small>
     </div>
 
     <div class="form-group" th:classappend="${#fields.hasErrors('lastName')}? 'has-danger'">
@@ -15,56 +21,46 @@
         <small id="lastNameHelp" class="form-control-feedback" th:each="error : ${#fields.errors('lastName')}" th:text="${error}">Error Message</small>
     </div>
 
-    <div class="form-group" th:classappend="${#fields.hasErrors('uin')}? 'has-danger'">
-        <label for="uinId">УИН на лекаря-специалист</label>
-        <input type="text" class="form-control" id="uinId" aria-describedby="uinHelp" name="uin" th:field="*{uin}"/>
-        <small id="uinHelp" class="form-control-feedback" th:each="error : ${#fields.errors('uin')}" th:text="${error}">Error Message</small>
+    <div class="form-group" th:classappend="${#fields.hasErrors('egn')}? 'has-danger'">
+        <label for="egnId">Единен Граждански Номер (ЕГН)</label>
+        <input type="text" class="form-control" id="egnId" aria-describedby="egnHelp" name="egn" th:field="*{egn}"/>
+        <small id="egnHelp" class="form-control-feedback" th:each="error : ${#fields.errors('egn')}" th:text="${error}">Error Message</small>
     </div>
 
-    <fieldset class="form-group" th:classappend="${#fields.hasErrors('title')}? 'has-danger'">
-        <label for="titleId">Изберете титла:</label>
-        <div class="form-check" th:each="title,iter : ${titles}">
-            <label class="form-check-label">
-                <input type="radio" class="form-check-input" id="titleId" th:value="${title.getName()}" th:field="*{title}"/>
-                <span th:text="${title.getName()}"></span>
-            </label>
-        </div>
-        <small id="titleHelp" class="form-control-feedback" th:each="error : ${#fields.errors('title')}" th:text="${error}">Error Message</small>
-    </fieldset>
-
-    <div class="form-group" th:classappend="${#fields.hasErrors('specialities')}? 'has-danger'">
-        <label for="specialitiesId">Изберете специалност(и)</label>
-        <select multiple="true" class="form-control" id="specialitiesId" name="specialities" th:field="*{specialities}">
-            <option th:each="speciality : ${specialities}" th:value="${speciality.name}" th:text="${speciality.name}">Option 1</option>
-        </select>
-        <small id="capHelp" class="form-control-feedback" th:each="error : ${#fields.errors('specialities')}" th:text="${error}">Error Message</small>
+    <div class="form-group" th:classappend="${#fields.hasErrors('rzokNumber')}? 'has-danger'">
+        <label for="rzokNumberId">РЗОК No.</label>
+        <input type="text" class="form-control" id="rzokNumberId" aria-describedby="rzokNumberHelp" name="rzokNumber" th:field="*{rzokNumber}"/>
+        <small id="rzokNumberHelp" class="form-control-feedback" th:each="error : ${#fields.errors('rzokNumber')}" th:text="${error}">Error Message</small>
     </div>
 
-    <div class="form-group" th:classappend="${#fields.hasErrors('profileImage')}? 'has-danger'">
-        <label for="imageId">Изберете профилна снимка</label>
-        <input type="file" accept="image/*" class="form-control-file" id="imageId" aria-describedby="imageHelp" name="profileImage" th:field="*{profileImage}"/>
-        <small id="imageHelp" class="form-control-feedback" th:each="error : ${#fields.errors('profileImage')}" th:text="${error}">Error Message</small>
+    <div class="form-group" th:classappend="${#fields.hasErrors('healthService')}? 'has-danger'">
+        <label for="healthServiceId">Здравен Район</label>
+        <input type="text" class="form-control" id="healthServiceId" aria-describedby="healthServiceHelp" name="healthService" th:field="*{healthService}"/>
+        <small id="healthServiceHelp" class="form-control-feedback" th:each="error : ${#fields.errors('healthService')}" th:text="${error}">Error Message</small>
     </div>
 
-    <div class="form-group" th:classappend="${#fields.hasErrors('email')} ? 'has-danger'">
-        <label class="form-control-label" for="inputUsername">E-mail адрес</label>
-        <input type="text" class="form-control form-control-danger" id="inputUsername" th:field="*{email}"/>
-        <div class="form-control-feedback" th:each="error : ${#fields.errors('email')}" th:text="${error}">Sorry, that email's taken. Try another?</div>
+    <div class="form-group" th:classappend="${#fields.hasErrors('town')}? 'has-danger'">
+        <label for="townId">Град / Село</label>
+        <input type="text" class="form-control" id="townId" aria-describedby="townHelp" name="town" th:field="*{town}"/>
+        <small id="townHelp" class="form-control-feedback" th:each="error : ${#fields.errors('town')}" th:text="${error}">Error Message</small>
     </div>
-    <div class="form-group" th:classappend="${#fields.hasErrors('password')}? 'has-danger'">
-        <label class="form-control-label" for="inputPassword">Парола</label>
-        <input type="password" class="form-control form-control-danger" id="inputPassword"  autocomplete="off" th:field="*{password}"/>
-        <div class="form-control-feedback" th:each="error : ${#fields.errors('password')}" th:text="${error}">Sorry, that password is incorrect?</div>
+
+    <div class="form-group" th:classappend="${#fields.hasErrors('address')}? 'has-danger'">
+        <label for="addressId">Адрес</label>
+        <input type="text" class="form-control" id="addressId" aria-describedby="addressHelp" name="address" th:field="*{address}"/>
+        <small id="addressHelp" class="form-control-feedback" th:each="error : ${#fields.errors('address')}" th:text="${error}">Error Message</small>
     </div>
-    <div class="form-group" th:classappend="${#fields.hasErrors('global')} ? 'has-danger'">
-        <label class="form-control-label" for="inputConfirmPassword">Повтори парола</label>
-        <input type="password" class="form-control form-control-danger" id="inputConfirmPassword" autocomplete="off" th:field="*{confirmPassword}"/>
-        <div class="form-control-feedback" th:each="error : ${#fields.errors('global')}" th:text="${error}">Sorry, passwords are not matching?</div>
+
+    <div class="form-group" th:classappend="${#fields.hasErrors('gp')}? 'has-danger'">
+        <label for="gpId">Личен лекар</label>
+        <input type="text" class="form-control" id="gpId" aria-describedby="gpHelp" name="gp" th:field="*{gp}"/>
+        <small id="gpHelp" class="form-control-feedback" th:each="error : ${#fields.errors('gp')}" th:text="${error}">Error Message</small>
     </div>
+
     <button type="submit" class="btn btn-success">Запази</button>
 </form>
 
-<form method="post" th:fragment="edit-form" th:object="${editDoctorindingModel}">
+<form method="post" th:fragment="edit-form" th:object="${editPatientBindingModel}">
     <div class="form-group" th:classappend="${#fields.hasErrors('name')}? 'has-danger'">
         <label for="firstName">Name</label>
         <input type="text" class="form-control" id="nameId" aria-describedby="nameHelp" name="name" th:field="*{name}" th:value="*{name}"/>
@@ -148,27 +144,6 @@
     </div>
 
     <button type="submit" class="btn btn-secondary">Edit</button>
-</form>
-
-<form method="post" th:fragment="login-form" th:object="${registerDoctorBidingModel}">
-    <div style="color: red" th:if="${error} != null" th:text="${error}"></div>
-    <form method="post">
-        <div class="form-group">
-            <label class="form-control-label" for="inputEmail">Имейл адрес</label>
-            <input type="email" class="form-control form-control-danger" id="inputEmail" name="email"/>
-        </div>
-        <div class="form-group">
-            <label class="form-control-label" for="inputLoginPassword">Парола</label>
-            <input type="password" class="form-control form-control-danger" id="inputLoginPassword" name="password"/>
-        </div>
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" name="rememberMe"/>
-                <span id="rememberMe">Запомни ме</span>
-            </label>
-        </div>
-        <input type="submit" class="btn btn-success" value="Вход"/>
-    </form>
 </form>
 
 </body>
