--- a/healthServiceApp/src/main/resources/templates/patients/forms.html
+++ b/healthServiceApp/src/main/resources/templates/patients/forms.html
@@ -58,6 +58,7 @@
     </div>
 
     <button type="submit" class="btn btn-success">Запази</button>
+    <a class="btn btn-warning" th:href="|/patients|">Откажи</a>
 </form>
 
 <form method="post" th:fragment="edit-form" th:object="${editPatientBindingModel}">
@@ -116,6 +117,7 @@
     </div>
 
     <button type="submit" class="btn btn-success">Запази</button>
+    <a class="btn btn-warning" th:href="|/patients|">Откажи</a>
 </form>
 
 </body>
