Add search patient form
Search for a patient by Egn and redairect to Edit or Add a patient
depends on the result

--- a/healthServiceApp/src/main/resources/templates/fragments/parts.html
+++ b/healthServiceApp/src/main/resources/templates/fragments/parts.html
@@ -32,7 +32,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarPatientsDropdownMenu">
                         <a class="dropdown-item" th:href="@{/patients}">Покажи всички</a>
-                        <a class="dropdown-item" th:href="@{/patients/add}">Добави нов</a>
+                        <a class="dropdown-item" th:href="@{/patients/search}">Добави нов</a>
                     </div>
                 </li>
             </div>
