--- a/healthServiceApp/src/main/resources/static/bootstrap/css/bootstrap.css
+++ b/healthServiceApp/src/main/resources/static/bootstrap/css/bootstrap.css
@@ -2679,7 +2679,7 @@ fieldset[disabled] a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #0275d8;
+  background-color: #385d9e;
   border-color: #0275d8;
 }
 
