Improve Nav Bar
Add the name ofogged user and and option for editing his profile

--- a/healthServiceApp/src/main/resources/templates/error/404.html
+++ b/healthServiceApp/src/main/resources/templates/error/404.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Bike Shop</title>
+    <title>Health Service</title>
     <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css"
           th:href="@{/bootstrap/css/bootstrap.min.css}"/>
 </head>
@@ -11,7 +11,7 @@
 </header>
 <main>
     <h1 class="h1">404 Not Found</h1>
-    <a class="btn btn-primary" href="/">Go Home</a>
+    <a class="btn btn-primary" href="/">Начало</a>
 </main>
 <script th:src="@{/jquery/jquery.min.js}"></script>
 <script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
