Improve "add medicine"
Check wather medicine code already exists and return different forms
dens on the result

--- a/healthServiceApp/src/main/resources/templates/fragments/parts.html
+++ b/healthServiceApp/src/main/resources/templates/fragments/parts.html
@@ -38,7 +38,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarPatientsDropdownMenu">
                         <a class="dropdown-item" th:href="@{/medicines}">Покажи всички</a>
-                        <a class="dropdown-item" th:href="@{/medicines/add}">Добави ново</a>
+                        <a class="dropdown-item" th:href="@{/medicines/search}">Добави ново</a>
                     </div>
                 </li>
             </div>
