--- a/healthServiceApp/src/main/resources/templates/fragments/forms.html
+++ b/healthServiceApp/src/main/resources/templates/fragments/forms.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <body>
 
-<form method="post" th:fragment="register-form" th:object="${registerDoctorBidingModel}" enctype="multipart/form-data">
+<form method="post" th:fragment="register-form" th:object="${registerDoctorBindingModel}" enctype="multipart/form-data">
 
     <div class="form-group" th:classappend="${#fields.hasErrors('uin')}? 'has-danger'">
         <label for="uinId">УИН</label>
@@ -80,7 +80,7 @@
     <a class="btn btn-warning" th:href="|/|">Откажи</a>
 </form>
 
-<form method="post" th:fragment="edit-form" th:object="${editDoctorBidingModel}">
+<form method="post" th:fragment="edit-form" th:object="${editDoctorBindingModel}">
 
     <div class="form-group" th:classappend="${#fields.hasErrors('uin')}? 'has-danger'">
         <label for="uinId">УИН</label>
@@ -104,7 +104,7 @@
         <label for="titleId">Титла</label>
         <div class="form-check" th:each="title,iter : ${titles}">
             <label class="form-check-label">
-                <input type="radio" class="form-check-input" id="titleId" th:value="${title.getName()}" th:field="*{title}" th:checked="${editDoctorBidingModel.title==title.getName()}?'checked':''"/>
+                <input type="radio" class="form-check-input" id="titleId" th:value="${title.getName()}" th:field="*{title}" th:checked="${editDoctorBindingModel.title==title.getName()}?'checked':''"/>
                 <span th:text="${title.getName()}"></span>
             </label>
         </div>
@@ -129,7 +129,7 @@
     <a class="btn btn-warning" th:href="|/|">Откажи</a>
 </form>
 
-<form method="post" th:fragment="login-form" th:object="${registerDoctorBidingModel}">
+<form method="post" th:fragment="login-form" th:object="${registerDoctorBindingModel}">
     <div style="color: red" th:if="${error} != null" th:text="${error}"></div>
     <form method="post">
         <div class="form-group">
