--- a/healthServiceApp/src/main/resources/templates/home.html
+++ b/healthServiceApp/src/main/resources/templates/home.html
@@ -14,6 +14,33 @@
     <br/>
     <div class="container">
         <h1>Health Service App Home Page</h1>
+        <br/>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                    <img class="d-block img-fluid" src="images/Untitled.png" alt="First slide"/>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block img-fluid" src="images/index.jpeg" alt="Second slide"/>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block img-fluid" src="images/dog-07.jpg" alt="Third slide"/>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
     </div>
 </main>
 <script th:src="@{/jquery/jquery.min.js}"></script>
