--- a/healthServiceApp/src/main/resources/templates/home.html
+++ b/healthServiceApp/src/main/resources/templates/home.html
@@ -15,31 +15,33 @@
     <div class="container">
         <h1>Health Service App Home Page</h1>
         <br/>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active">
-                    <img class="d-block img-fluid" src="images/Untitled.png" alt="First slide"/>
+        <div class="container">
+            <div id="carouselHome" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselHome" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselHome" data-slide-to="1"></li>
+                    <li data-target="#carouselHome" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <img class="d-block img-fluid" src="images\118jpg3.jpg" width="100%" height="auto" alt="First slide"/>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="images\119jpg3.jpg" width="100%" height="auto" alt="Second slide"/>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="images\120jpg3.jpg" width="100%" height="auto" alt="Third slide"/>
+                    </div>
                 </div>
-                <div class="carousel-item">
-                    <img class="d-block img-fluid" src="images/index.jpeg" alt="Second slide"/>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block img-fluid" src="images/dog-07.jpg" alt="Third slide"/>
-                </div>
+                <a class="carousel-control-prev" href="#carouselHome" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselHome" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
         </div>
     </div>
 </main>
