--- a/healthServiceApp/src/main/resources/templates/fragments/parts.html
+++ b/healthServiceApp/src/main/resources/templates/fragments/parts.html
@@ -49,8 +49,8 @@
                         Диагнози
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDiagnosisDropdownMenu">
-                        <a class="dropdown-item" th:href="@{/diagnosis}">Покажи всички</a>
-                        <a class="dropdown-item" th:href="@{/diagnosis/add}">Добави нова</a>
+                        <a class="dropdown-item" th:href="@{/diagnoses}">Покажи всички</a>
+                        <a class="dropdown-item" th:href="@{/diagnoses/add}">Добави нова</a>
                     </div>
                 </li>
             </div>
